Archive2/2d/b9bff3ae39e46c/output
main.cpp: In function 'City buildNetwork()':
main.cpp:15:11: warning: variable 'head' set but not used [-Wunused-but-set-variable]
     City *head;
           ^
main.cpp: In function 'int main()':
main.cpp:32:15: error: cannot convert 'City' to 'City*' in assignment
     builtList = buildNetwork();
               ^
